--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
     "theme_color": "#29abe0",
     "icons": [
       {
-        "src": "./assets/img/logo.png",
+        "src": "./assets/img/Logo192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "./assets/img/logo.png",
+        "src": "./assets/img/Logo512x512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
